fixed spacing issue between images of cats

--- a/style.css
+++ b/style.css
@@ -74,11 +74,10 @@
 .boxes{
     display: flex;
     justify-content: center;
-    gap: 40px;
-    padding: 0px 200px 20px;
+    gap: 30px;
 }
 .box{
-    flex: 1;
+    flex: 0 0 200px;
     text-align: center;
 }
 .box img{
@@ -89,6 +88,7 @@
     border: 3px solid #3882F6;
 }
 .box p{
+    justify-content: center;
     font-size: 18px;
     color: rgb(64, 64, 64);
 }
